spent too much time fixing css

--- a/static_calendarV2/style/style.css
+++ b/static_calendarV2/style/style.css
@@ -1,7 +1,5 @@
 
-html {
-    overflow: auto;
-}
+
 body {
     border: red 16px solid;
     background: lightblue url("/images/background2.png");
@@ -15,54 +13,33 @@ body {
     padding: 0; /*space from content and border*/
        
 }
-.heading_grid {
-    display: grid;
-    grid-template-columns:repeat(2, 1fr);
-    
-}
-.heading_grid > div {
-    height: 60px;
-}
-.body_grid {
-    display: grid;
-    grid-template-columns: 100%;
-    grid-gap: 1em;
-}
-.body_grid > div {
-    display: grid;
-    grid-template-columns:1fr 1.25fr 1fr;
-    grid-auto-rows: 200px;
-    justify-items: stretch;
-    align-items: stretch;
-       
-}
-.body_grid > div > div:nth-child(even) {
-    border: black 1px solid;
-}
-.body_grid > div > div {
-    display: grid;
-    justify-content: center;
-    align-content: center;
+
+.picture {
+    display: none;
 }
 
-.logo {
-    border: 1px solid black;
-    text-align: center;
-    
+@media screen and (min-width: 500px) {
+    .picture {
+        display: block;
+    }
+    .body_grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
-.year {
-    border: 1px solid black;
-    text-align: center;
-}
-
 .month {
     display: grid;
     grid-template-columns:1fr 7fr;
     padding: 5px 10px 5px 15px;
-    /*border: black 1px solid;*/
+    border: black 1px solid;
+    width: 320px;
     
 }
-.month > div:first-child {
+p {
+    margin: 0;
+    margin-right: 5px;
+}
+.name {
     background-color: blue;
     color: white;
     writing-mode: vertical-rl;
@@ -74,11 +51,6 @@ body {
     justify-content: center;
     align-content: center;
     
-}
-.month > div {
-    display: grid;
-    justify-content: center;
-    align-content: center;
 }
 td {
     height: 5px;
@@ -108,8 +80,4 @@ tr:first-child {
 table tr:not(:first-child) > td {
   border-right: black 1px solid;
   border-bottom: black 1px solid;          
-}
-img {
-max-width:100%;
-max-height:100%;
 }
